# aoc

./: .gitignore  LICENSE  README.md
2022/: day01.py  day02.py
2024/: day01.py  day02.py  day03.py  day05.py  day06.py  day1.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
2024/day1/: part1.py  part2.py
2024/day2/: part1.py  part2.py
2024/day3/: part1.py  part2.py
2024/day4/: part1.py  part2.py
2024/day5/: part1.py  part2.py
2024/day6/: part1.py  part2.py
2024/day7/: part1.py  part2.py
aocgen/: README.md  pyproject.toml
aocgen/src/aocgen/: __init__.py  __main__.py
aocutils/: README.md  pyproject.toml
aocutils/src/aocutils/: __init__.py  grid.py
